--- a/snapDish/www/index.html
+++ b/snapDish/www/index.html
@@ -11,6 +11,9 @@
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
+	
+	<!-- angular-resource-->
+	<script src="lib/ionic/js/angular/angular-resource.min.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
@@ -23,8 +26,10 @@
 	<script src="js/services.js"></script>
     <script src="js/controllers.js"></script>
   </head>
-  <body ng-app="starter">
+
+  <body ng-app="app">
 	<ion-nav-view>
 	</ion-nav-view>
   </body>
+  
 </html>
