--- a/snapDish/www/index.html
+++ b/snapDish/www/index.html
@@ -1,35 +1,36 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-    <title></title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+	<title></title>
 
 
-    <!-- compiled css output -->
-    <link href="css/ionic.app.css" rel="stylesheet">
+	<!-- compiled css output -->
+	<link href="css/ionic.app.css" rel="stylesheet">
 
-    <!-- ionic/angularjs js -->
-    <script src="lib/ionic/js/ionic.bundle.js"></script>
-	
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+	<!-- ionic/angularjs js -->
+	<script src="lib/ionic/js/ionic.bundle.js"></script>
+
 	<!-- angular-resource-->
 	<script src="lib/ionic/js/angular/angular-resource.min.js"></script>
 
-    <!-- cordova script (this will be a 404 during development) -->
-    <script src="cordova.js"></script>
+	<!-- cordova script (this will be a 404 during development) -->
+	<script src="cordova.js"></script>
 
 	<!-- facebook -->
 	<script src="lib/openfb.js"></script>
-	
-    <!-- your app's js -->
-    <script src="js/app.js"></script>
+
+	<!-- your app's js -->
+	<script src="js/app.js"></script>
 	<script src="js/services.js"></script>
-    <script src="js/controllers.js"></script>
+	<script src="js/controllers.js"></script>
   </head>
 
   <body ng-app="app">
 	<ion-nav-view>
 	</ion-nav-view>
   </body>
-  
+
 </html>
