--- a/snapDish/www/index.html
+++ b/snapDish/www/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
+
 	<meta charset="utf-8">
 	<meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-	<title></title>
 
+	<title>SnapDish</title>
 
 	<!-- compiled css output -->
 	<link href="css/ionic.app.css" rel="stylesheet">
 
+	<!-- jquery -->
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+
 	<!-- ionic/angularjs js -->
 	<script src="lib/ionic/js/ionic.bundle.js"></script>
 
@@ -22,13 +25,21 @@
 	<!-- facebook -->
 	<script src="lib/openfb.js"></script>
 
-	<!-- your app's js -->
-	<script src="js/app.js"></script>
-	<script src="js/server.service.js"></script>
-	<script src="js/controllers.js"></script>
+	<!-- modules -->
+	<script src="scripts/modules/app.js"></script>
+
+	<!--services -->
+	<script src="scripts/services/server.service.js"></script>
+
+	<!-- controllers -->
+	<script src="scripts/controllers/login.controller.js"></script>
+	<script src="scripts/controllers/restaurants.controller.js"></script>
+	<script src="scripts/controllers/dishes.controller.js"></script>
+	<script src="scripts/controllers/main.controller.js"></script>
+
   </head>
 
-  <body ng-app="app">
+  <body ng-app="app" ng-controller="MainCtrl">
 	<ion-nav-view>
 	</ion-nav-view>
   </body>
