--- a/snapDish/www/index.html
+++ b/snapDish/www/index.html
@@ -29,12 +29,13 @@
 	<script src="scripts/modules/app.js"></script>
 
 	<!--services -->
+	<script src="scripts/services/restaurant.service.js"></script>
 	<script src="scripts/services/server.service.js"></script>
 
 	<!-- controllers -->
 	<script src="scripts/controllers/login.controller.js"></script>
 	<script src="scripts/controllers/restaurants.controller.js"></script>
-	<script src="scripts/controllers/dishes.controller.js"></script>
+	<script src="scripts/controllers/restaurant.controller.js"></script>
 	<script src="scripts/controllers/main.controller.js"></script>
 
   </head>
