--- a/snapDish/www/index.html
+++ b/snapDish/www/index.html
@@ -19,6 +19,7 @@
 	<!-- angular-resource-->
 	<script src="lib/ionic/js/angular/angular-resource.min.js"></script>
 
+	<script src="scripts/vendors/ng-cordova.min.js"></script>
 	<!-- cordova script (this will be a 404 during development) -->
 	<script src="cordova.js"></script>
 
@@ -36,12 +37,18 @@
 	<script src="scripts/controllers/login.controller.js"></script>
 	<script src="scripts/controllers/restaurants.controller.js"></script>
 	<script src="scripts/controllers/restaurant.controller.js"></script>
+		<script src="scripts/controllers/dish.controller.js"></script>
 	<script src="scripts/controllers/main.controller.js"></script>
 
   </head>
 
   <body ng-app="app" ng-controller="MainCtrl">
 	<ion-nav-view>
+<ion-nav-bar>
+  <ion-nav-back-button class="button-clear">
+	<i class="ion-arrow-left-c"></i> Back
+		</ion-nav-back-button>
+	</ion-nav-bar>
 	</ion-nav-view>
   </body>
 
