--- a/snapDish/www/index.html
+++ b/snapDish/www/index.html
@@ -32,12 +32,14 @@
 	<!--services -->
 	<script src="scripts/services/restaurant.service.js"></script>
 	<script src="scripts/services/server.service.js"></script>
+	<script src="scripts/services/dish.service.js"></script>
 
 	<!-- controllers -->
 	<script src="scripts/controllers/login.controller.js"></script>
 	<script src="scripts/controllers/restaurants.controller.js"></script>
 	<script src="scripts/controllers/restaurant.controller.js"></script>
-		<script src="scripts/controllers/dish.controller.js"></script>
+	<script src="scripts/controllers/dish.controller.js"></script>
+	<script src="scripts/controllers/viewDish.controller.js"></script>
 	<script src="scripts/controllers/main.controller.js"></script>
 
   </head>
