--- a/snapDish/www/index.html
+++ b/snapDish/www/index.html
@@ -5,7 +5,10 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
 
-	<title>SnapDish</title>
+	<title>SnapDish</title> 
+
+	<!-- ionicons cdn -->
+	<link rel="stylesheet" type="text/css" media="screen" href="http://code.ionicframework.com/ionicons/1.5.2/css/ionicons.min.css" />
 
 	<!-- compiled css output -->
 	<link href="css/ionic.app.css" rel="stylesheet">
