--- a/snapDish/www/index.html
+++ b/snapDish/www/index.html
@@ -46,6 +46,30 @@
 	<script src="scripts/controllers/dish.controller.js"></script>
 	<script src="scripts/controllers/main.controller.js"></script>
 
+	       <script>
+            // Facebbok OAuth init
+/*            window.fbAsyncInit = function () {
+                FB.init({
+                    appId: '1604369319786635', // Replace the App ID with yours
+                    status: true, // check login status
+                    cookie: true, // enable cookies to allow the server to access the session
+                    xfbml: true  // parse XFBML
+                });
+            };
+            // Load the SDK asynchronously
+            (function (d) {
+                var js, id = 'facebook-jssdk', ref = d.getElementsByTagName('script')[0];
+                if (d.getElementById(id)) {
+                    return;
+                }
+                js = d.createElement('script');
+                js.id = id;
+                js.async = true;
+                js.src = "//connect.facebook.net/en_US/all.js";
+                ref.parentNode.insertBefore(js, ref);
+            }(document));*/
+            // Facebbok OAuth init - END 
+        </script>
   </head>
 
   <body ng-app="app" ng-controller="MainCtrl">
