--- a/snapDish/www/index.html
+++ b/snapDish/www/index.html
@@ -37,6 +37,7 @@
 	<script src="scripts/services/restaurants.service.js"></script>
 	<script src="scripts/services/restaurant.service.js"></script>
 	<script src="scripts/services/dish.service.js"></script>
+	<script src="scripts/services/user.service.js"></script>
 
 	<!-- controllers -->
 	<script src="scripts/controllers/login.controller.js"></script>
