--- a/snapDish/www/index.html
+++ b/snapDish/www/index.html
@@ -15,7 +15,7 @@
 
 	<!-- jquery -->
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-
+	
 	<!-- ionic/angularjs js -->
 	<script src="lib/ionic/js/ionic.bundle.js"></script>
 
@@ -23,11 +23,6 @@
 	<script src="lib/ionic/js/angular/angular-resource.min.js"></script>
 
 	<script src="scripts/vendors/ng-cordova.min.js"></script>
-	<!-- cordova script (this will be a 404 during development) -->
-	<script src="cordova.js"></script>
-
-	<!-- facebook -->
-	<script src="lib/openfb.js"></script>
 
 	<!-- modules -->
 	<script src="scripts/modules/app.js"></script>
@@ -48,8 +43,8 @@
 	<script src="scripts/controllers/main.controller.js"></script>
 
   </head>
-
 	<body ng-app="app" ng-controller="MainCtrl" id="snapDishApp">
+
 		<ion-nav-view>
 			<ion-nav-bar>
 				<ion-nav-back-button >
@@ -60,8 +55,10 @@
 			<button class="menu-snap-dish" ng-click="buttonMenu()">
 				<i class="ion-navicon-round"></i>
 			</button>
-<!-- 			<img src="../images/menu.png" > -->
+			<!--<img src="../images/menu.png" >-->
 		</ion-nav-view>
+		<script type="text/javascript" src="cordova.js"></script>
+		<script type="text/javascript" src="js/facebookConnectPlugin.js"></script>
+	
 	</body>
-
 </html>
