--- a/snapDish/www/index.html
+++ b/snapDish/www/index.html
@@ -36,6 +36,7 @@
 
 	<!-- controllers -->
 	<script src="scripts/controllers/login.controller.js"></script>
+	<script src="scripts/controllers/loginInBrowser.controller.js"></script>
 	<script src="scripts/controllers/restaurants.controller.js"></script>
 	<script src="scripts/controllers/restaurant.controller.js"></script>
 	<script src="scripts/controllers/newDish.controller.js"></script>
@@ -58,7 +59,7 @@
 			<!--<img src="../images/menu.png" >-->
 		</ion-nav-view>
 		<script type="text/javascript" src="cordova.js"></script>
-		<script type="text/javascript" src="js/facebookConnectPlugin.js"></script>
+		<!--<script type="text/javascript" src="js/facebookConnectPlugin.js"></script>-->
 	
 	</body>
 </html>
