--- a/snapDish/www/index.html
+++ b/snapDish/www/index.html
@@ -19,6 +19,9 @@
 	<!-- ionic/angularjs js -->
 	<script src="lib/ionic/js/ionic.bundle.js"></script>
 
+	<!-- cordova -->
+	<script type="text/javascript" src="cordova.js"></script>
+
 	<!-- angular-resource-->
 	<script src="lib/ionic/js/angular/angular-resource.min.js"></script>
 
@@ -58,7 +61,7 @@
 			</button>
 			<!--<img src="../images/menu.png" >-->
 		</ion-nav-view>
-		<script type="text/javascript" src="cordova.js"></script>
+	
 		<!--<script type="text/javascript" src="js/facebookConnectPlugin.js"></script>-->
 	
 	</body>
